force-app/main/default/objects/DFSS_SnapShot_Job_List__c/DFSS_SnapShot_Job_List__c.object-meta.xml
<CustomObject>
    <description>The continuous integration job list for SnapShot</description>
    <label>SnapShot Job List</label>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SnapShot Job Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>