force-app/main/default/objects/DFSS_SnapShot_Job_List__c/fields/Developer__c.field-meta.xml
<CustomField>
    <fullName>Developer__c</fullName>
    <label>Developer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>