force-app/main/default/objects/DFSS_SnapShot_Job_List__c/fields/Global_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Global_Identifier__c</fullName>
    <label>Global Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>