force-app/main/default/objects/DFSS_SnapShot_Job_List__c/fields/History_Log__c.field-meta.xml
<CustomField>
    <fullName>History_Log__c</fullName>
    <label>History Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>