force-app/main/default/objects/DFSS_SnapShot_Job_List__c/fields/Job_List__c.field-meta.xml
<CustomField>
    <fullName>Job_List__c</fullName>
    <label>Job List</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>