force-app/main/default/objects/DFSS_SnapShot_Job_List__c/fields/Job_Load__c.field-meta.xml
<CustomField>
    <fullName>Job_Load__c</fullName>
    <label>Job Load</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>